--- a/config/.config/emacs/init.org
+++ b/config/.config/emacs/init.org
@@ -303,18 +303,18 @@ Auto refresh buffer when file change outside of Emacs
 ** Ivy
 Minibuffer with preview result
 #+begin_src emacs-lisp
-(use-package ivy
-  :defer 0.1
-  :diminish
-  :config
-    (ivy-mode)
-    (define-key ivy-mode-map          (kbd "C-c b") #'nil)
-    (define-key ivy-minibuffer-map    (kbd "C-j")   #'ivy-next-line)
-    (define-key ivy-minibuffer-map    (kbd "C-k")   #'ivy-previous-line)
-    ; Swiper mapped C-K to kill buffer, need to remap that to previous line
-    (define-key ivy-switch-buffer-map (kbd "C-k")   #'ivy-previous-line)
-    (define-key ivy-switch-buffer-map (kbd "C-x")   #'ivy-switch-buffer-kill)
-)
+  ;; (use-package ivy
+  ;;   :defer 0.1
+  ;;   :diminish
+  ;;   :config
+  ;;     (ivy-mode)
+  ;;     (define-key ivy-mode-map          (kbd "C-c b") #'nil)
+  ;;     (define-key ivy-minibuffer-map    (kbd "C-j")   #'ivy-next-line)
+  ;;     (define-key ivy-minibuffer-map    (kbd "C-k")   #'ivy-previous-line)
+  ;;     ; Swiper mapped C-K to kill buffer, need to remap that to previous line
+  ;;     (define-key ivy-switch-buffer-map (kbd "C-k")   #'ivy-previous-line)
+  ;;     (define-key ivy-switch-buffer-map (kbd "C-x")   #'ivy-switch-buffer-kill)
+  ;; )
 #+end_src
 
 *** Ivy rich 
@@ -377,22 +377,170 @@ Put ivy buffer in middle of the screen (THIS IS INTERFERRING WITH LSP MODE)
 ** Counsel
 M-x with ivy panel
 #+begin_src emacs-lisp
-(use-package counsel
-  :after ivy
-  :config
-    (setq ivy-initial-inputs-alist nil)
-)
+  ;; (use-package counsel
+  ;;   :after ivy
+  ;;   :config
+  ;;     (setq ivy-initial-inputs-alist nil)
+  ;; )
 #+end_src
 
 ** Swiper
 In buffer search with ivy panel
 #+begin_src emacs-lisp
-(use-package swiper
-  :after ivy
-  :bind (("C-p" . swiper))
+  ;; (use-package swiper
+  ;;   :after ivy
+  ;;   :bind (("C-p" . swiper))
+  ;; )
+#+end_src
+
+* Selectrum/Marginalia/Embark/Consult
+#+begin_src emacs-lisp
+(use-package selectrum-prescient
 )
 #+end_src
 
+#+begin_src emacs-lisp
+(use-package selectrum
+:init (selectrum-mode +1)
+      (selectrum-prescient-mode +1)
+      (prescient-persist-mode +1)
+:config
+  (define-key selectrum-minibuffer-map    (kbd "C-j")   #'selectrum-next-candidate)
+  (define-key selectrum-minibuffer-map    (kbd "C-k")   #'selectrum-previous-candidate)
+)
+#+end_src
+
+#+begin_src emacs-lisp
+;; Enable richer annotations using the Marginalia package
+(use-package marginalia
+  ;; Either bind `marginalia-cycle` globally or only in the minibuffer
+  :bind (("M-A" . marginalia-cycle)
+         :map minibuffer-local-map
+         ("M-A" . marginalia-cycle))
+
+  ;; The :init configuration is always executed (Not lazy!)
+  :init (marginalia-mode)
+)
+#+end_src
+
+#+begin_src emacs-lisp
+;; Example configuration for Consult
+(use-package consult
+  ;; Replace bindings. Lazily loaded due by `use-package'.
+  :bind (;; C-c bindings (mode-specific-map)
+         ("C-c h" . consult-history)
+         ("C-c m" . consult-mode-command)
+         ("C-c b" . consult-bookmark)
+         ("C-c k" . consult-kmacro)
+         ;; C-x bindings (ctl-x-map)
+         ("C-x M-:" . consult-complex-command)     ;; orig. repeat-complex-command
+         ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer
+         ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window
+         ("C-x 5 b" . consult-buffer-other-frame)  ;; orig. switch-to-buffer-other-frame
+         ;; Custom M-# bindings for fast register access
+         ("M-#" . consult-register-load)
+         ("M-'" . consult-register-store)          ;; orig. abbrev-prefix-mark (unrelated)
+         ("C-M-#" . consult-register)
+         ;; Other custom bindings
+         ("M-y" . consult-yank-pop)                ;; orig. yank-pop
+         ("<help> a" . consult-apropos)            ;; orig. apropos-command
+         ;; M-g bindings (goto-map)
+         ("M-g e" . consult-compile-error)
+         ("M-g f" . consult-flymake)               ;; Alternative: consult-flycheck
+         ("M-g g" . consult-goto-line)             ;; orig. goto-line
+         ("M-g M-g" . consult-goto-line)           ;; orig. goto-line
+         ("M-g o" . consult-outline)               ;; Alternative: consult-org-heading
+         ("M-g m" . consult-mark)
+         ("M-g k" . consult-global-mark)
+         ("M-g i" . consult-imenu)
+         ("M-g I" . consult-imenu-multi)
+         ;; M-s bindings (search-map)
+         ("M-s f" . consult-find)
+         ("M-s F" . consult-locate)
+         ("M-s g" . consult-grep)
+         ("M-s G" . consult-git-grep)
+         ("M-s r" . consult-ripgrep)
+         ("C-p" . consult-line)
+         ("M-s L" . consult-line-multi)
+         ("M-s m" . consult-multi-occur)
+         ("M-s k" . consult-keep-lines)
+         ("M-s u" . consult-focus-lines)
+         ;; Isearch integration
+         ("M-s e" . consult-isearch)
+         :map isearch-mode-map
+         ("M-e" . consult-isearch)                 ;; orig. isearch-edit-string
+         ("M-s e" . consult-isearch)               ;; orig. isearch-edit-string
+         ("M-s l" . consult-line)                  ;; needed by consult-line to detect isearch
+         ("M-s L" . consult-line-multi))           ;; needed by consult-line to detect isearch
+
+  ;; Enable automatic preview at point in the *Completions* buffer.
+  ;; This is relevant when you use the default completion UI,
+  ;; and not necessary for Vertico, Selectrum, etc.
+  :hook (completion-list-mode . consult-preview-at-point-mode)
+
+  ;; The :init configuration is always executed (Not lazy)
+  :init
+
+  ;; Optionally configure the register formatting. This improves the register
+  ;; preview for `consult-register', `consult-register-load',
+  ;; `consult-register-store' and the Emacs built-ins.
+  (setq register-preview-delay 0
+        register-preview-function #'consult-register-format)
+
+  ;; Optionally tweak the register preview window.
+  ;; This adds thin lines, sorting and hides the mode line of the window.
+  (advice-add #'register-preview :override #'consult-register-window)
+
+  ;; Optionally replace `completing-read-multiple' with an enhanced version.
+  (advice-add #'completing-read-multiple :override #'consult-completing-read-multiple)
+
+  ;; Use Consult to select xref locations with preview
+  (setq xref-show-xrefs-function #'consult-xref
+        xref-show-definitions-function #'consult-xref)
+
+  ;; Configure other variables and modes in the :config section,
+  ;; after lazily loading the package.
+  :config
+
+  ;; Optionally configure preview. The default value
+  ;; is 'any, such that any key triggers the preview.
+  ;; (setq consult-preview-key 'any)
+  ;; (setq consult-preview-key (kbd "M-."))
+  ;; (setq consult-preview-key (list (kbd "<S-down>") (kbd "<S-up>")))
+  ;; For some commands and buffer sources it is useful to configure the
+  ;; :preview-key on a per-command basis using the `consult-customize' macro.
+  (consult-customize
+   consult-theme
+   :preview-key '(:debounce 0.2 any)
+   consult-ripgrep consult-git-grep consult-grep
+   consult-bookmark consult-recent-file consult-xref
+   consult--source-file consult--source-project-file consult--source-bookmark
+   :preview-key (kbd "M-."))
+
+  ;; Optionally configure the narrowing key.
+  ;; Both < and C-+ work reasonably well.
+  (setq consult-narrow-key "<") ;; (kbd "C-+")
+
+  ;; Optionally make narrowing help available in the minibuffer.
+  ;; You may want to use `embark-prefix-help-command' or which-key instead.
+  ;; (define-key consult-narrow-map (vconcat consult-narrow-key "?") #'consult-narrow-help)
+
+  ;; Optionally configure a function which returns the project root directory.
+  ;; There are multiple reasonable alternatives to chose from.
+  ;;;; 1. project.el (project-roots)
+  (setq consult-project-root-function
+        (lambda ()
+          (when-let (project (project-current))
+            (car (project-roots project)))))
+  ;;;; 2. projectile.el (projectile-project-root)
+  ;; (autoload 'projectile-project-root "projectile")
+  ;; (setq consult-project-root-function #'projectile-project-root)
+  ;;;; 3. vc.el (vc-root-dir)
+  ;; (setq consult-project-root-function #'vc-root-dir)
+  ;;;; 4. locate-dominating-file
+  ;; (setq consult-project-root-function (lambda () (locate-dominating-file "." ".git")))
+)
+#+end_src
 * MultiMedia
 ** Spotify
 #+begin_src emacs-lisp
@@ -776,7 +924,7 @@ Visualize undos
 (global-set-key (kbd "C-c C-a") 'org-agenda)
 (global-set-key (kbd "C-c b")   'switch-to-buffer)
 (global-set-key (kbd "C-c n")   'treemacs)
-(global-set-key (kbd "C-c x")   'counsel-M-x)
+(global-set-key (kbd "C-c x")   'execute-extended-command)
 (global-set-key (kbd "C-c C-p") 'counsel-projectile-rg)
 #+end_src
 
